# P-Compiler

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsup.config.ts  web.package.json
electron/: main.ts  (+1 more)
python/: .dockerignore  .env  Dockerfile  Makefile  data.db  email_template.html  index.py  pyproject.toml  schema.prisma
python/common/di/: manager.py
python/config/: index.py
python/controllers/auth/: login.py
python/controllers/compile/: compile.py
python/controllers/course/: course.py
python/controllers/gemini/: gemini_controller.py
python/controllers/history/: history.py
python/controllers/question/: question_controller.py
python/controllers/user/: user.py
python/dtos/auth/: login.py
python/dtos/compile/: compile.py
python/dtos/course/: course.py
python/dtos/gemini/: gemini_dto.py
python/dtos/history/: history.py
python/dtos/question/: question_dto.py
python/dtos/user/: user.py
python/migrations/20241101143241_p_compiler/: migration.sql
python/models/base/: error.py  response.py
python/models/response/: template.py
python/routes/: index.py
python/routes/auth/: login.py
python/routes/compile/: compile.py
python/routes/course/: course.py
python/routes/gemini/: gemini.py
python/routes/history/: history.py
python/routes/question/: question.py
python/routes/user/: user.py
python/services/auth/: login.py
python/services/compile/: compile.py
python/utils/: env.py  httpx.py  jwt.py  redis.py
(+74 files in other folders)
