[tool.poetry]
name = "p-compiler"
version = "0.1.0"
description = ""
authors = ["Luong Tuan Anh <dulieu.vblc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.5.2"
beautifulsoup4 = "^4.12.3"
dependency-injector = "^4.42.0"
pydantic = "^2.9.2"
prisma = "^0.15.0"
pyjwt = "^2.9.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

