[tool.poetry]
name = "p-compiler"
version = "0.1.0"
description = ""
authors = ["Luong Tuan Anh <dulieu.vblc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.5.2"
beautifulsoup4 = "^4.12.3"
dependency-injector = "^4.42.0"
pydantic = "^2.9.2"
pyjwt = "^2.9.0"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.12"
google-generativeai = "^0.8.3"
psycopg2 = "^2.9.10"
schedule = "^1.2.2"
orjson = "^3.10.11"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

